<resources>
    <string name="app_name">Metis Referrals</string>
    <string name="loginButton">Log in</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="Profile">Profile</string>
    <string name="addressText">Address:</string>
    <string name="cityText">Profile</string>
    <string name="MyDoctors">My Doctors</string>
    <string name="MyAppts">My Appointments</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="AboutText">Metis Referrals is a fast and efficient way to find doctors around you in your area.
        When you are searching for your doctor, you can filter by their specialities, insurance, and location.
        With your own customized profile you can schedule future appointments at your own convince.
        With Metis Referrals, you get the most quality of care you need saving more time and having everything you need to know at your fingertips.</string>
    <string name="AboutName">Metis Referrals</string>
    <string name="firstNameText">First Name</string>
    <string name="middleInitialText">Middle Initial</string>
    <string name="lastNameText">Last Name</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="ProfileFirstName">Alex</string>
    <string name="ProfileLastName">Dungy</string>
    <string name="ProfilePasswords">**********</string>
    <string name="ProfileAddress">9920 Saint Louis St.</string>
    <string name="ProfileCity">Atlanta, GA</string>
    <string name="ProfileST">GA</string>
    <string name="ProfileZip">465789</string>
    <string name="ProfileEmail"> www.ASmith@gmail.com</string>
    <string name="ProfileInsurance">Florida Blue</string>


</resources>
