<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:orientation="vertical"
    android:background="#ffffff">

    <ImageButton
        android:id="@+id/persistentDocButton"
        android:layout_width="97dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/onedochdpi"
        android:layout_alignParentBottom="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/persistentApptButton"
        android:layout_width="97dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/oneapptshdpi"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/persistentProfileButton"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/persistentProfileButton"
        android:layout_width="97dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/oneprohdpi"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/persistentHomeButton"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/persistentDocButton"
        app:srcCompat="@drawable/onehomehdpi"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/doNotUse"
        android:layout_width="97dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/onedochdpi"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/persistentDocButton"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/profhdpi"
        android:layout_above="@+id/persistentDocButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="388dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="146dp"
        android:text="FIrst Name:"
        android:textColor="@color/colorPrimaryDark"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="49dp"
        android:text="Last Name:"
        android:textColor="@color/colorPrimaryDark"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="Address:"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProfileAddress"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="29dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/ProfileFirstName"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/ProfileLastName"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        android:text="@string/ProfileCity"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/textView9"
        android:text="@string/ProfileZip"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Email:"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView2"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignTop="@+id/textView11"
        android:text="@string/ProfileEmail"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="Insurance:"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView16"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_alignTop="@+id/textView14"
        android:text="@string/ProfileInsurance"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="25dp"
        android:text="Password:"
        android:textColor="@color/colorPrimaryDark"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignTop="@+id/textView16"
        android:text="@string/ProfilePasswords"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/profileman"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toEndOf="@+id/textView17"
        tools:ignore="ContentDescription" />


</RelativeLayout>